fix(styles): invalid width of scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ input {
 }
 
 *::-webkit-scrollbar {
-  @apply w-1 h-1;
+  @apply w-1.5 h-1.5;
 }
 
 *::-webkit-scrollbar-track {
